k8s/clickhouse/clickhouseDB-service-in-scdf-ns.yml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse-db
  namespace: scdf
spec:
  type: ExternalName
  externalName: clickhouse-db.default.svc.cluster.local
  ports:
  - port: 8123
