k8s/clickhouse/ingress-resource-clickhouse.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickhouse-ingress
  annotations:     
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "clickhouse.mariusdev.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: clickhouse-db
            port:
              number: 8123
